--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Willkommen</h1>
+        <h1>Willkommen auf der website von Bibelfratz</h1>
         <a href="geburten-und-todesfaelle.html">Geburten und Todesfälle weltweit</a>
         <a href="weltbevoelkerung.html">Weltbevölkerung von 1900 bis 2024</a>
     </div>
