--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Willkommen auf der website von Bibelfratz</h1>
+        <h1>Willkommen</h1>
         <a href="geburten-und-todesfaelle.html">Geburten und Todesfälle weltweit</a>
         <a href="weltbevoelkerung.html">Weltbevölkerung von 1900 bis 2024</a>
+        <a href="taschenrechner.html">Taschenrechner</a>
     </div>
 </body>
 </html>
