--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
             </ol>
         </section>
         <section>
-            <h2>Alle Trinkwassersorten der Welt nach Ort</h2>
+            <h2>Die Besten Trinkwassersorten in europa</h2>
             <div class="water-sources">
                 <ul id="water-sources">
-                    <li>Evian - Evian-les-Bains, Frankreich</li>
-                    <li>Fiji - Viti Levu, Fidschi</li>
-                    <li>Voss - Iveland, Norwegen</li>
-                    <li>San Pellegrino - San Pellegrino Terme, Italien</li>
-                    <li>Gerolsteiner - Gerolstein, Deutschland</li>
+                    <li>Evian - Evian-les-Bains, Frankreich 0,99 euro</li>
+                    <li>Fiji - Viti Levu, Fidschi 3,50 euro</li>
+                    <li>Voss - Iveland, Norwegen 1,69 euro</li>
+                    <li>San Pellegrino - San Pellegrino Terme, Italien 0,99 euro</li>
+                    <li>Gerolsteiner - Gerolstein, Deutschland 0,99 euro</li>
                 </ul>
             </div>
         </section>
