--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </ol>
         </section>
         <section>
-            <h2>Die Besten Trinkwassersorten in europa</h2>
+            <h2>Die Besten Trinkwassersorten in europa Preis Pro liter</h2>
             <div class="water-sources">
                 <ul id="water-sources">
                     <li>Evian - Evian-les-Bains, Frankreich 0,99 euro</li>
