--- a/index.html
+++ b/index.html
@@ -27,6 +27,31 @@
             0%   { transform: translate(0, 0); }
             100% { transform: translate(-100%, 0); }
         }
+        .search-bar {
+            padding: 10px;
+            background: #007BFF;
+            color: white;
+            text-align: center;
+        }
+        .search-bar input {
+            width: 80%;
+            padding: 10px;
+            font-size: 1em;
+            border: none;
+            border-radius: 5px;
+        }
+        .search-bar button {
+            padding: 10px 20px;
+            font-size: 1em;
+            border: none;
+            border-radius: 5px;
+            background-color: #0056b3;
+            color: white;
+            cursor: pointer;
+        }
+        .search-bar button:hover {
+            background-color: #004494;
+        }
         .container {
             max-width: 1200px;
             margin: 50px auto;
@@ -169,9 +194,13 @@
     <div class="marquee">
         <span>Bibelfratz Website herzlich willkommen</span>
     </div>
+    <div class="search-bar">
+        <input type="text" id="search-input" placeholder="Suche...">
+        <button onclick="search()">Suchen</button>
+    </div>
     <div class="container">
         <h1>Willkommen zur Bibelfratz Website</h1>
-        <section>
+        <section id="calculator">
             <h2>Taschenrechner</h2>
             <div class="calculator">
                 <input type="text" id="display" class="display" disabled>
@@ -196,7 +225,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="currency-converter">
             <h2>Währungsrechner (Dollar zu Euro und umgekehrt)</h2>
             <div class="currency-converter">
                 <input type="number" id="amount" placeholder="Betrag">
@@ -208,7 +237,7 @@
                 <input type="text" id="result" class="display" disabled placeholder="Ergebnis">
             </div>
         </section>
-        <section>
+        <section id="world-clock">
             <h2>Weltzeitzonen-Uhr</h2>
             <div class="world-clock">
                 <select id="timezone">
@@ -218,10 +247,10 @@
                     <option value="America/Denver">Denver (GMT-07:00)</option>
                     <option value="America/Chicago">Chicago (GMT-06:00)</option>
                     <option value="America/New_York">New York (GMT-05:00)</option>
-                    <option value="Atlantic/Reykjavik">Reykjavik (GMT+00:00)</option>
-                    <option value="Europe/London">London (GMT+01:00)</option>
+                    <option value="America/Argentina/Buenos_Aires">Buenos Aires (GMT-03:00)</option>
+                    <option value="Europe/London">London (GMT+00:00)</option>
+                    <option value="Europe/Paris">Paris (GMT+01:00)</option>
                     <option value="Europe/Berlin">Berlin (GMT+02:00)</option>
-                    <option value="Asia/Dubai">Dubai (GMT+04:00)</option>
                     <option value="Asia/Tokyo">Tokyo (GMT+09:00)</option>
                     <option value="Australia/Sydney">Sydney (GMT+10:00)</option>
                 </select>
@@ -229,7 +258,7 @@
                 <input type="text" id="clock" class="display" disabled placeholder="Uhrzeit">
             </div>
         </section>
-        <section>
+        <section id="world-wealth">
             <h2>Aktuelles Geldvermögen auf der Welt</h2>
             <div class="world-wealth">
                 <input type="text" id="global-wealth" class="display" disabled placeholder="Weltweites Vermögen">
@@ -244,10 +273,10 @@
                 <li>Mark Zuckerberg - $120 Milliarden</li>
             </ol>
         </section>
-        <section>
+        <section id="water-sources">
             <h2>Alle Trinkwassersorten der Welt nach Ort und Preis</h2>
             <div class="water-sources">
-                <ul id="water-sources">
+                <ul>
                     <li>Evian - Evian-les-Bains, Frankreich <span>€0.50/L</span></li>
                     <li>Fiji - Viti Levu, Fidschi <span>$0.70/L</span></li>
                     <li>Voss - Iveland, Norwegen <span>€1.00/L</span></li>
@@ -256,7 +285,7 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section id="moon-cycle">
             <h2>Mondzyklus</h2>
             <div class="moon-cycle">
                 <div class="moon">
@@ -264,13 +293,13 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="temperature">
             <h2>Durchschnittliche Erdtemperatur</h2>
             <div class="temperature">
                 <p id="temperature">Lade Temperaturdaten...</p>
             </div>
         </section>
-        <section>
+        <section id="sun-times">
             <h2>Sonnenaufgang und Sonnenuntergang</h2>
             <div class="sun-times">
                 <input type="text" id="sunrise" class="display" disabled placeholder="Sonnenaufgang">
@@ -278,7 +307,7 @@
                 <button onclick="fetchSunTimes()">Aktualisieren</button>
             </div>
         </section>
-        <section>
+        <section id="sea-level">
             <h2>Meeresspiegel</h2>
             <div class="sea-level">
                 <p id="sea-level">Lade Meeresspiegel-Daten...</p>
@@ -408,7 +437,8 @@
 
         async function fetchSeaLevel() {
             try {
-                const response = await fetch('https://api.sealeveldata.org/current'); // Beispiel-API
+                // Use a public API for sea level data
+                const response = await fetch('https://api.earthdata.nasa.gov/sealevel'); // Placeholder URL
                 const data = await response.json();
                 document.getElementById('sea-level').textContent = `Aktueller Meeresspiegel: ${data.seaLevel} m`;
             } catch (error) {
@@ -416,11 +446,25 @@
             }
         }
 
-        // Initialize the moon phase, temperature, sun times, and sea level
-        updateMoonPhase();
-        fetchTemperature();
-        fetchSunTimes();
-        fetchSeaLevel();
+        function search() {
+            const query = document.getElementById('search-input').value.toLowerCase();
+            const sections = document.querySelectorAll('section');
+            sections.forEach(section => {
+                const sectionId = section.id;
+                if (sectionId.includes(query)) {
+                    section.style.display = 'block';
+                } else {
+                    section.style.display = 'none';
+                }
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchTemperature();
+            updateMoonPhase();
+            fetchSunTimes();
+            fetchSeaLevel();
+        });
     </script>
 </body>
 </html>
